tests/purs/failing/FoldableInstance5.out
Error found:
in module [33mFoldableInstance5[0m
at tests/purs/failing/FoldableInstance5.purs:9:1 - 9:30 (line 9, column 1 - line 9, column 30)

  The type variable `a` must only be used as the last argument in a data type:

    tests/purs/failing/FoldableInstance5.purs:8:27 - 8:28 (line 8, column 27 - line 8, column 28)


in data constructor [33mTest[0m
in type class instance
[33m                             [0m
[33m  Data.Foldable.Foldable Test[0m
[33m                             [0m

See https://github.com/purescript/documentation/blob/master/errors/CannotDeriveInvalidConstructorArg.md for more information,
or to contribute content related to this error.

